[gd_scene load_steps=10 format=3 uid="uid://cepn4uj7wa126"]

[ext_resource type="Script" path="res://UI/PlayerMenu/player_menu.gd" id="1_hbfhr"]
[ext_resource type="PackedScene" uid="uid://4tgftpxrrqt2" path="res://UI/Inventory/InventoryPlayer/inventory_player.tscn" id="2_27fjt"]
[ext_resource type="Script" path="res://UI/PlayerMenu/ModContainer.gd" id="2_s4iq0"]
[ext_resource type="Texture2D" uid="uid://b2j6bj6m2pkct" path="res://Art/Basic_GUI_Bundle/BoxesBanners/Box_Blue_Rounded.png" id="4_b1rus"]
[ext_resource type="Texture2D" uid="uid://yrk2jrsouyg4" path="res://Art/Basic_GUI_Bundle/BoxesBanners/Box_Rounded.png" id="4_v82s2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nx1v5"]
texture = ExtResource("4_v82s2")

[sub_resource type="Theme" id="Theme_w5sye"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_nx1v5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lrdr7"]
texture = ExtResource("4_b1rus")
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_iq1tc"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_lrdr7")

[node name="PlayerMenu" type="PanelContainer"]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -421.0
offset_top = -196.0
offset_right = 422.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_w5sye")
script = ExtResource("1_hbfhr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="InventoryPlayer" parent="HBoxContainer" instance=ExtResource("2_27fjt")]
layout_mode = 2

[node name="WeaponsMarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/WeaponsMarginContainer"]
layout_mode = 2
color = Color(0.329412, 0.32549, 1, 1)

[node name="WeaponsContainer" type="GridContainer" parent="HBoxContainer/WeaponsMarginContainer"]
layout_mode = 2

[node name="ModsMarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Border" type="PanelContainer" parent="HBoxContainer/ModsMarginContainer"]
layout_mode = 2
theme = SubResource("Theme_iq1tc")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ModsMarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ModsMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "INVENTORY"

[node name="ModContainer" type="GridContainer" parent="HBoxContainer/ModsMarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 5
script = ExtResource("2_s4iq0")
